cluster/media/radarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  selector:
    matchLabels:
      app: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radarr
    spec:
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
      containers:
        - image: ghcr.io/onedr0p/radarr-develop:4.3.1.6822@sha256:8b3167caff215443e1fd0cdcb417f85dc307faa97a216479df2c4257487c369e
          name: radarr
          resources:
            requests:
              cpu: 15m
              memory: 100Mi
            limits:
              cpu: 2000m
              memory: 1Gi
          ports:
            - containerPort: 7878
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: torrents-v2
              mountPath: /torrents
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: torrents-v2
          persistentVolumeClaim:
            claimName: torrents-v2
