cluster/media/radarr/ingress-no-sso.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-no-sso
  annotations:
    nginx.ingress.kubernetes.io/enable-global-auth: 'false'
spec:
  rules:
  - host: radarr.sko.ai
    http:
      paths:
      - backend:
          service:
            name: radarr
            port:
              number: 80
        path: /api
        pathType: Prefix
