cluster/media/radarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
spec:
  rules:
  - host: radarr.sko.ai
    http:
      paths:
      - backend:
          service:
            name: radarr
            port:
              number: 80
        path: /
        pathType: Prefix
